[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/shipthis/wizards/android/steps/Step2Keystore.gd" id="1_step"]

[node name="Step2Keystore" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_step")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Create or Import Android Keystore"
theme_override_font_sizes/font_size = 14

[node name="LoadingLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Loading..."

[node name="ChooseContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PromptLabel" type="Label" parent="ChooseContainer"]
layout_mode = 2
text = "Would you like to create a new keystore or import an existing one?"

[node name="Spacer1" type="Control" parent="ChooseContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="ChooseContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="ChooseContainer/ButtonContainer"]
layout_mode = 2
text = "Create New Keystore"

[node name="ImportButton" type="Button" parent="ChooseContainer/ButtonContainer"]
layout_mode = 2
text = "Import Existing Keystore"

[node name="ImportFormContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="FilePathLabel" type="Label" parent="ImportFormContainer"]
layout_mode = 2
text = "Path to your .jks file:"

[node name="FilePathContainer" type="HBoxContainer" parent="ImportFormContainer"]
layout_mode = 2

[node name="FilePathInput" type="LineEdit" parent="ImportFormContainer/FilePathContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false
placeholder_text = "Select a .jks file..."

[node name="BrowseButton" type="Button" parent="ImportFormContainer/FilePathContainer"]
layout_mode = 2
text = "Browse..."

[node name="Spacer2" type="Control" parent="ImportFormContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="PasswordLabel" type="Label" parent="ImportFormContainer"]
layout_mode = 2
text = "Keystore Password:"

[node name="PasswordInput" type="LineEdit" parent="ImportFormContainer"]
layout_mode = 2
placeholder_text = "Enter your keystore password"
secret = true

[node name="Spacer3" type="Control" parent="ImportFormContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="ImportSubmitButton" type="Button" parent="ImportFormContainer"]
layout_mode = 2
text = "Import Keystore"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Select Keystore File"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Select"
file_mode = 0
access = 2
filters = PackedStringArray("*.jks", "*.keystore")

[node name="StatusLabel" type="Label" parent="."]
visible = false
layout_mode = 2
